Improve the queue test sample

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -31,3 +31,9 @@ rewrite {
 optIn {
   breaksInsideChains = true
 }
+
+fileOverride {
+  "glob:**/src/main/scala-2/**.scala" {
+    runner.dialect = "scala213"
+  }
+}
